--- a/index.html
+++ b/index.html
@@ -254,11 +254,9 @@
 						</div>
 					</div>
 				</div>
-				<footer>
-					<p class="text-center">Design by <a href="https://templateflip.com/"
-							target="_blanky">templateflip.com</a></p>
-				</footer>
 				<hr class="d-print-none" />
+				<p class="text-center d-print-none">Design by <a href="https://templateflip.com/"
+						target="_blank">templateflip.com</a></p>
 				<script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
 				<script src="scripts/aos.js?ver=1.2.0"></script>
 				<script src="scripts/main.js?ver=1.2.0"></script>
