Update latest info

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 						</div>
 						<div class="col-lg-8 col-md-7 text-center text-md-start">
 							<h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Teng Chee Yuen</h2>
-							<p data-aos="fade-left" data-aos-delay="100">Cyber Security Professional, CISSP, CRT, GSEC,
-								OSCP, CEI
+							<p data-aos="fade-left" data-aos-delay="100">Cyber Security Professional, CISSP, CCSP, GSEC,
+								OSCP, CRT, AWS-SAA
 							</p>
 						</div>
 					</div>
@@ -52,8 +52,9 @@
 						<div class="col-md-6">
 							<h2 class="h3 mb-3">About Me</h2>
 							<p>Innovative Cyber Forensic & Security person
-								with focus in VAPT, DF, CA & Cyber Security Awareness. Experienced in VAPT, DFIR, CA,
-								Threat Hunting & Malware Analysis with a BSc in Forensic Computing.</p>
+								with focus in Penetration Testing, Digital Forensic, Compromise Assessment & Cyber
+								Security Awareness. Experienced in Penetration Testing, Digital Forensic, Compromise
+								Assessment, Threat Hunting & Malware Analysis with a BSc in Forensic Computing.</p>
 						</div>
 						<div class="col-md-5 offset-md-1">
 							<div class="row mt-2">
@@ -73,7 +74,7 @@
 									<div class="pb-1">Phone</div>
 								</div>
 								<div class="col-sm-8">
-									<div class="pb-1 text-secondary">+6012-6868011</div>
+									<div class="pb-1 text-secondary">+6011-54315209</div>
 								</div>
 								<div class="col-sm-4">
 									<div class="pb-1">LinkedIn</div>
@@ -93,6 +94,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="page-break"></div>
 				<hr class="d-print-none" />
 				<div class="skills-section px-3 px-lg-4">
 					<h2 class="h3 mb-3">Professional Skills</h2>
@@ -119,9 +121,24 @@
 					<div class="timeline">
 						<div class="timeline-card timeline-card-primary card shadow-sm">
 							<div class="card-body">
+								<div class="h5 mb-1">SOC Lead <span class="text-muted h6">at Hytech Consultancy
+										Management</span></div>
+								<div class="text-muted text-small mb-2">October 2023 - Present</div>
+								<div>
+									<li>Design & implement SOC People, Process & Procedure & roadmap from scratch</li>
+									<li>Lead the Incident Response, Threat Hunting & Security Monitoring activities</li>
+									<li>Streamline the security tools policy and minimize the overall maintenance
+										requirements to 30% from the original effort</li>
+									<li>Acting as Subject Matter Expert to provide advisory to Cybersecurity team on the
+										roadmap design & implementation</li>
+								</div>
+							</div>
+						</div>
+						<div class="timeline-card timeline-card-primary card shadow-sm">
+							<div class="card-body">
 								<div class="h5 mb-1">Lead, Cyber Forensic & Incident Response <span
 										class="text-muted h6">at Maybank</span></div>
-								<div class="text-muted text-small mb-2">August 2021 - Present</div>
+								<div class="text-muted text-small mb-2">August 2021 - October 2023</div>
 								<div>
 									<li>Perform Root Cause Analysis & Incident Response on security incident</li>
 									<li>Perform Compromise Assessment to ensure the environment are not getting
@@ -153,7 +170,11 @@
 								<div class="h5 mb-1">Security Tester (Contract) <span class="text-muted h6">at Al AiN IT
 										Consultants Sdn Bhd</span></div>
 								<div class="text-muted text-small mb-2">April 2018 - January 2019</div>
-								<div>Setup & Perform Security Testing to validate & verify the security of the system
+								<div>
+									<li>Research, design & propose plan to implement security testing process &
+										procedure</li>
+									<li>Acting as Independant Validation & Verification (IV&V) personnel to review
+										security testing report from 3rd party</li>
 								</div>
 							</div>
 						</div>
@@ -162,8 +183,8 @@
 								<div class="h5 mb-1">Full Stack Developer (Contract) <span class="text-muted h6">at Al
 										AiN IT Consultants Sdn Bhd</span></div>
 								<div class="text-muted text-small mb-2">May 2017 - November 2018</div>
-								<div>Develop a software testing system end-to-end from Frontend to backend using PHP,
-									MySQL and HTML</div>
+								<div>I developed a software testing full stack web application with PHP, MySQL & some
+									simple HTML/CSS/JS</div>
 							</div>
 						</div>
 						<div class="timeline-card timeline-card-primary card shadow-sm">
@@ -173,11 +194,12 @@
 										Consultants Sdn Bhd</span></div>
 								<div class="text-muted text-small mb-2">February 2017 - April 2017</div>
 								<div>Perform multiple kind of software testing such as functional testing, automation
-									testing, performance testing etc</div>
+									testing with Katalon, performance testing etc</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				<div class="page-break"></div>
 				<hr class="d-print-none" />
 				<div class="education-section px-3 px-lg-4 pb-4">
 					<h2 class="h3 mb-4">Education</h2>
@@ -188,41 +210,37 @@
 										Staffordshire University</span></div>
 								<div class="text-muted text-small mb-2">2016 - 2019</div>
 								<div>
-									Notable Achievement:
-									<li>Project Manager of Battle of Hackers 2017, the very first CTF competition
-										organised in Asia Pacific University of Technology & Innovation with inviting
-										other universities to join. The BoH competition is now a yearly event by APU
-									</li>
+									Project Manager of Battle of Hackers (BoH) 2017, the very first CTF competition
+									organised in APU with inviting other universities to join. BoH is now a yearly event by APU &
+									expanded to ASEAN & subsequently global level
 								</div>
 							</div>
 						</div>
 						<div class="timeline-card timeline-card-success card shadow-sm">
 							<div class="card-body">
-								<div class="h5 mb-1">STPM (Art Stream) <span class="text-muted h6">from Mt. High
-										Scool</span></div>
+								<div class="h5 mb-1">STPM (Art Stream) <span class="text-muted h6">from SMK Bandar Tun Hussein Onn 2</span></div>
 								<div class="text-muted text-small mb-2">2015 - 2016</div>
 								<div>President of Form 6 Society</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="page-break"></div>
 				<hr class="d-print-none" />
 				<div class="work-experience-section px-3 px-lg-4 pb-4">
 					<h2 class="h3 mb-4">Personal Contribution</h2>
 					<div class="timeline">
 						<div class="timeline-card timeline-card-primary card shadow-sm">
 							<div class="card-body">
-								<div class="h5 mb-1">Chapter Board Member (Academia) <span class="text-muted h6">at
-										(ISC)<sup>2</sup> Malaysia Chapter</span></div>
-								<div class="text-muted text-small mb-2">March 2023 - Present</div>
+								<div class="h5 mb-1">Student Advisor <span class="text-muted h6">at
+										APU Forensic & Security Research Centre Student Section</span></div>
+								<div class="text-muted text-small mb-2">November 2018 - Present</div>
 							</div>
 						</div>
 						<div class="timeline-card timeline-card-primary card shadow-sm">
 							<div class="card-body">
-								<div class="h5 mb-1">Student Advisor <span class="text-muted h6">at
-										APU Forensic & Security Research Centre Student Section</span></div>
-								<div class="text-muted text-small mb-2">November 2018 - Present</div>
+								<div class="h5 mb-1">Chapter Board Member (Academia) <span class="text-muted h6">at
+										ISC2 Malaysia Chapter</span></div>
+								<div class="text-muted text-small mb-2">March 2023 - March 2024</div>
 							</div>
 						</div>
 						<div class="timeline-card timeline-card-primary card shadow-sm">
@@ -239,18 +257,16 @@
 					<h2 class="h3 mb-3">Certifications</h2>
 					<div class="row">
 						<div class="col-md-6">
-							<div class="mb-2"><span>(ISC)<sup>2</sup> CISSP, CC</span></div>
+							<div class="mb-2"><span>ISC2 CISSP, CCSP, CC</span></div>
 							<div class="mb-2"><span>Offensive Security OSCP</span></div>
 							<div class="mb-2"><span>TCM Security PMAT</span></div>
-							<div class="mb-2"><span>EC-Council CEH, CHFI, CSA, CEI, ECSA</span></div>
-							<div class="mb-2"><span>ISO 27001 Lead Auditor</span></div>
+							<div class="mb-2"><span>EC-Council CEH, CHFI, CSA, ECSA</span></div>
 						</div>
 						<div class="col-md-6">
-							<div class="mb-2"><span>HRDF Train the Trainer</span></div>
 							<div class="mb-2"><span>CREST CRT, CPSA</span></div>
 							<div class="mb-2"><span>GIAC GSEC</span></div>
+							<div class="mb-2"><span>AWS Certified Solution Architect - Associate</span></div>
 							<div class="mb-2"><span>ISACA CSX-F</span></div>
-							<div class="mb-2"><span>CompTIA Security+</span></div>
 
 						</div>
 					</div>
